--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-harry potter
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Título do Seu Site</title>
+    </head>
+<body>
+
+    <header>
+        <h1>Bem-vindo ao Meu Site!</h1>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="inicio">
+            <h2>Página Principal</h2>
+            <p>Este é o conteúdo principal da sua página. Você pode adicionar texto, imagens, vídeos, etc., aqui.</p>
+            </section>
+
+        <section id="sobre">
+            <h2>Sobre Nós</h2>
+            <p>Conte um pouco sobre sua empresa, projeto ou sobre você.</p>
+        </section>
+
+        <section id="contato">
+            <h2>Entre em Contato</h2>
+            <p>Detalhes de contato ou um formulário podem vir aqui.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Seu Nome ou Nome da Empresa. Todos os direitos reservados.</p>
+    </footer>
+
+</body>
+</html>
